tools/pancake-go/deployment/gke/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pancake-fleet
  labels:
    name: pancake-fleet
