tools/pancake-go/deployment/gke/k8s/fleet-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pancake-fleet-server
  namespace: pancake-fleet
spec:
  type: ClusterIP
  selector:
    app: pancake-fleet-server
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 8081
    targetPort: 8081
